src/test/ui/unused/unused-macro-rules.stderr
error: unused macro definition
  --> $DIR/unused-macro-rules.rs:4:1
   |
LL | / macro_rules! unused {
LL | |     () => {};
LL | | }
   | |_^
   |
note: lint level defined here
  --> $DIR/unused-macro-rules.rs:1:9
   |
LL | #![deny(unused_macros)]
   |         ^^^^^^^^^^^^^

error: unused macro definition
  --> $DIR/unused-macro-rules.rs:11:9
   |
LL | /         macro_rules! m {
LL | |             () => {};
LL | |         }
   | |_________^
...
LL |   create_macro!();
   |   ---------------- in this macro invocation

error: unused macro definition
  --> $DIR/unused-macro-rules.rs:24:5
   |
LL | /     macro_rules! unused {
LL | |         () => {};
LL | |     }
   | |_____^
   |
note: lint level defined here
  --> $DIR/unused-macro-rules.rs:23:12
   |
LL |     #[deny(unused_macros)]
   |            ^^^^^^^^^^^^^

error: aborting due to 3 previous errors

